--- a/todo.adoc
+++ b/todo.adoc
@@ -4,3 +4,5 @@
         With the way everything is currently set up rotation would be difficult.
         I make the dementions of the tetrinomios arrays a cube (equal width and
         height). Rotation would be much simpler.
+
+- [ ] Fix how last piece gets drawn before you loose
