--- a/todo.adoc
+++ b/todo.adoc
@@ -8,3 +8,5 @@
 - [ ] Fix how last piece gets drawn before you loose
 
 - [ ] need to make sure you cannot rotate out of bounds, or into other pieces
+
+- [ ] make sure you can't rotate a placed piece!
